--- a/app/comps/sidebar/sidebar.html
+++ b/app/comps/sidebar/sidebar.html
@@ -54,7 +54,7 @@
   </ul>
 </div> -->
 
-<div class="overlay" id="myOverlay" ></div>
+<!-- <div class="overlay" id="myOverlay" ></div> -->
 
 <!-- Sidebar -->
 <nav class="navbar navbar-inverse navbar-fixed-top" id="sidebar-wrapper" role="navigation">
