--- a/app/index.html
+++ b/app/index.html
@@ -89,6 +89,7 @@
   <script type="text/javascript" src="comps/login/login.js"></script>
   <script type="text/javascript" src="comps/sidebar/sidebar.js"></script>
   <script type="text/javascript" src="comps/footer/footer.js"></script>
+  <script type="text/javascript" src="comps/loading/loading.js"></script>
   <script type="text/javascript" src="comps/clientHeader/clientHeader.js"></script>
   <script type="text/javascript" src="comps/home/home.js"></script>
   <script type="text/javascript" src="comps/deuda/deuda.js"></script>
