--- a/app/comps/footer/footer.html
+++ b/app/comps/footer/footer.html
@@ -5,7 +5,7 @@
       <div class="col-md-4">
         <br>
         <br>
-        <i class="fab fa-2x fa-instagram"></i>
+        <i class="fab fa-2x fa-instagram" style="color: #2d587d;"></i>
         <br>
         <p>¡Síguenos en Instagram!</p>
         <br>
@@ -13,14 +13,14 @@
       <div class="col-md-4">
         <br>
         <br>
-        <i class="fab fa-2x fa-facebook"></i>
+        <i class="fab fa-2x fa-facebook" style="color: #39508e;"></i>
         <br>
         <p>¡Agréganos en Facebook!</p>
       </div>
       <div class="col-md-4">
         <br>
         <br>
-        <i class="fab fa-2x fa-twitter"></i>
+        <i class="fab fa-2x fa-twitter" style="color: #33a3da;"  ></i>
         <br>
         <p>¡Síguenos en Twitter!</p>
       </div>
