--- a/app/comps/deuda/deuda.html
+++ b/app/comps/deuda/deuda.html
@@ -65,44 +65,78 @@
         </nav>
         <header-client></header-client>
 
-        <div class="row">
-          <div class="col-md-12">
-  		        <table datatable="" dt-options="dtOptions" dt-columns="dtColumns" class="table table-striped table-bordered">
-  			</table>
+      <div class="col-md-12 mt-10 mb-10">
+        <div class="card " >
+          <div class="card-body">
+            <div class="row">
+              <div class="col-md-12">
+                <!-- <table datatable="" dt-options="dtOptions" dt-columns="dtColumns" class="table table-striped table-bordered">
+                </table> -->
 
-        <!-- <table datatable="ng" dt-options="dtOptions"  class="table table-striped table-bordered" >
-          <thead>
-              <tr>
-                <th scope="col"><p class="text-center">#</p></th>
-                <th scope="col"><p class="text-center">N° Pedido</p></th>
-                <th scope="col"><p class="text-center">Fecha factura</p></th>
-                <th scope="col"><p class="text-center">Fecha pedido</p></th>
-                <th scope="col"><p class="text-center">Nombre vendedor</p></th>
-                <th scope="col"><p class="text-center">Email vendedor</p></th>
-                <th scope="col"><p class="text-center">Opciones</p></th>
-              </tr>
-          </thead>
-          <tbody>
+                <table datatable="ng" dt-options="dtOptions"  class="table table-striped table-bordered" >
+                  <thead>
+                    <tr>
+                      <!-- <th scope="col"><p class="text-center">#</p></th>
+                        <th scope="col"><p class="text-center">N° Pedido</p></th>
+                        <th scope="col"><p class="text-center">Fecha factura</p></th>
+                        <th scope="col"><p class="text-center">Fecha pedido</p></th>
+                        <th scope="col"><p class="text-center">Nombre vendedor</p></th>
+                        <th scope="col"><p class="text-center">Email vendedor</p></th> -->
 
-              <tr  ng-repeat="fact in facturas"  ng-click="selectFactura(facturasList[fact])" ng-class="{ selectedRow : $index == productIndex }" >
-                <td><p class="text-center">{{ $index + 1 }}</p></td>
-                <td><p class="text-center">{{ fact }}</p></td>
-                <td><p class="text-center">{{ facturasList[fact][0].fecha_factura }}</p></td>
-                <td><p class="text-center">{{ facturasList[fact][0].fecha_pedido }}</p></td>
-                <td><p class="text-center">{{ facturasList[fact][0].nombre_vendedor }}</p></td>
-                <td><p class="text-center">{{  facturasList[fact][0].email_vendedor }}</p></td>
-                <td>
-                  <i class="fa fa-eye" style="cursor: pointer;"   ng-click="selectFactura(facturasList[fact])"  data-toggle="modal" data-target="#modalFactura"  ></i>
-                </td>
-              </tr>
+                        <th scope="col"><p class="text-center">N° de documento</p></th>
+                        <th scope="col"><p class="text-center">Tipo venta</p></th>
+                        <th scope="col"><p class="text-center">Fecha vencimiento</p></th>
+                        <th scope="col"><p class="text-center">Monto inicial</p></th>
+                        <th scope="col"><p class="text-center">Monto actual</p></th>
+                        <th scope="col"><p class="text-center">Fecha ultimo pago</p></th>
+                        <th scope="col"><p class="text-center">Monto ultimo pago</p></th>
+                        <th scope="col"><p class="text-center">Estatus</p></th>
+                        <th scope="col"><p class="text-center">codio</p></th>
+                        <th scope="col"><p class="text-center">Tipo documento</p></th>
+                        <th scope="col"><p class="text-center">Tipo cambio</p></th>
+                        <th scope="col"><p class="text-center">Fecha aviso</p></th>
+                        <th scope="col"><p class="text-center">Documento aviso</p></th>
+                        <th scope="col"><p class="text-center">Serie</p></th>
+                        <th scope="col"><p class="text-center">Fecha documento</p></th>
+                        <th scope="col"><p class="text-center">Opciones</p></th>
+                      </tr>
+                    </thead>
+                    <tbody>
+
+                      <tr  ng-repeat="x in listDeuda"   >
+                        <td><p class="text-center">{{ x.no_fisico }}</p></td>
+                        <td><p class="text-center">{{ x.tipo_venta }}</p></td>
+                        <td><p class="text-center">{{ x.fecha_vencimiento }}</p></td>
+                        <td><p class="text-center">{{ x.monto_inicial }}</p></td>
+                        <td><p class="text-center">{{ x.monto_actual }}</p></td>
+                        <td><p class="text-center">{{ x.fecha_ultimo_pago }}</p></td>
+                        <td><p class="text-center">{{ x.monto_ultimo_pago }}</p></td>
+                        <td><p class="text-center">{{ x.estatus_deuda }}</p></td>
+                        <td><p class="text-center">{{ x.codigo_tipo_doc }}</p></td>
+                        <td><p class="text-center">{{ x.nombre_tipo_doc }}</p></td>
+                        <td><p class="text-center">{{ x.tipo_cambio }}</p></td>
+                        <td><p class="text-center">{{ x.fecha_aviso }}</p></td>
+                        <td><p class="text-center">{{ x.docu_aviso }}</p></td>
+                        <td><p class="text-center">{{ x.serie_fisico }}</p></td>
+                        <td><p class="text-center">{{ x.fecha_documento }}</p></td>
+
+                        <td>
+                          <i class="fa fa-eye" style="cursor: pointer;"   ng-click="selectFactura(facturasList[fact])"  data-toggle="modal" data-target="#modalFactura"  ></i>
+                        </td>
+                      </tr>
 
 
-          </tbody>
-          </table> -->
+                    </tbody>
+                  </table>
 
+                </div>
+
+              </div>
+
+          </div>
         </div>
-
       </div>
+
     </div>
 
 
