--- a/app/comps/home/home.html
+++ b/app/comps/home/home.html
@@ -9,25 +9,42 @@
 
       <div class="col-md-12 col-sm-12">
 
-        <br>
+        <!-- <br>
         <h5 class="text-center"> <strong>HOME</strong> </h5>
-        <h2 class="text-center"> <strong>{{client_info.nombre_cliente}}</strong> </h2>
+        <h2 class="text-center"> <strong>{{client_info.nombre_cliente}}</strong> </h2> -->
+        <nav aria-label="breadcrumb" role="navigation">
+          <ol class="breadcrumb m-0">
+            <li class="breadcrumb-item"><a class="text-success" >servidor.com</a></li>
+            <!-- <li class="breadcrumb-item"><a class="text-info" href="#!/home">Home</a></li> -->
+            <li class="breadcrumb-item active" aria-current="page">Inicio</li>
+            <li class="breadcrumb-item"><a class="text-info" href="#!/home">{{client_info.nombre_cliente}}</a></li>
+
+          </ol>
+        </nav>
 
         <div class="container-fluid">
-          <div class="row">
-            <div class="col-md-4">
-              <canvas id="myChart" width="400" height="200"></canvas>
-            </div>
-            <div class="col-md-4">
-              <canvas id="myChart2" width="400" height="200"></canvas>
-            </div>
-            <div class="col-md-4">
-              <canvas id="myChart3" width="400" height="200"></canvas>
-            </div>
 
+          <div class="card " >
+            <div class="card-body">
+              <!-- <h5 class="card-title">Informacion del Cliente </h5> -->
+              <div class="row">
+
+                <div class="col-md-4">
+                  <canvas id="myChart" width="400" height="200"></canvas>
+                </div>
+                <div class="col-md-4">
+                  <canvas id="myChart2" width="400" height="200"></canvas>
+                </div>
+                <div class="col-md-4">
+                  <canvas id="myChart3" width="400" height="200"></canvas>
+                </div>
+
+              </div>
+            </div>
           </div>
+
           <br>
-          <hr>
+          <!-- <hr> -->
           <div class="row">
 
             <div class="col-md-4" style="font-size:14px">
