--- a/app/comps/clientHeader/clientHeader.html
+++ b/app/comps/clientHeader/clientHeader.html
@@ -11,7 +11,7 @@
   <div class="row " style="margin-bottom: 15px;" >
 
       <div class="col-md-6">
-        <div class="card " >
+        <div class="card card-min " >
           <div class="card-body">
             <h5 class="card-title">Informacion del Cliente </h5>
             <p class="mb-1"> <span class="text-muted">Razon Social: </span>{{client_info.nombre_cliente}}</p>
@@ -25,7 +25,7 @@
       </div>
       <div class="col-md-6">
 
-        <div class="card " >
+        <div class="card card-min" >
           <div class="card-body">
             <h5 class="card-title">Detalles</h5>
             <p class="mb-1"><span class="text-muted">Codigo: </span> {{client_info.cod_cliente}}</p>
