--- a/app/comps/deuda/deuda.html
+++ b/app/comps/deuda/deuda.html
@@ -170,6 +170,7 @@
 
 
                             <th scope="col"><p class="text-center">N° de fisico</p></th>
+                            <th scope="col"><p class="text-center">Tipo documento</p></th>
                             <th scope="col"><p class="text-center">Fecha documento</p></th>
                             <th scope="col"><p class="text-center">Fecha vencimiento</p></th>
                             <th scope="col"><p class="text-center">Monto actual</p></th>
@@ -179,7 +180,6 @@
                               <th scope="col"><p class="text-center">Monto ultimo pago</p></th>
                               <th scope="col"><p class="text-center">Estatus</p></th>
                               <th scope="col"><p class="text-center">codio</p></th>
-                              <th scope="col"><p class="text-center">Tipo documento</p></th>
                               <th scope="col"><p class="text-center">Tipo cambio</p></th>
                               <th scope="col"><p class="text-center">Fecha aviso</p></th>
                               <th scope="col"><p class="text-center">Documento aviso</p></th>
@@ -191,16 +191,16 @@
 
                             <tr  ng-repeat="x in listFact"   >
                               <td><p class="text-center">{{ x.no_fisico }}</p></td>
+                              <td><p class="text-center">{{ x.nombre_tipo_doc }}</p></td>
                               <td><p class="text-center">{{ x.fecha_documento }}</p></td>
                               <td><p class="text-center">{{ x.fecha_vencimiento }}</p></td>
-                              <td><p class="text-center">{{ x.monto_actual }}</p></td>
+                              <td><p class="text-center">{{ formato(2,x.monto_actual) }}</p></td>
                               <!-- <td><p class="text-center">{{ x.tipo_venta }}</p></td>
                                 <td><p class="text-center">{{ x.monto_inicial }}</p></td>
                                 <td><p class="text-center">{{ x.fecha_ultimo_pago }}</p></td>
                                 <td><p class="text-center">{{ x.monto_ultimo_pago }}</p></td>
                                 <td><p class="text-center">{{ x.estatus_deuda }}</p></td>
                                 <td><p class="text-center">{{ x.codigo_tipo_doc }}</p></td>
-                                <td><p class="text-center">{{ x.nombre_tipo_doc }}</p></td>
                                 <td><p class="text-center">{{ x.tipo_cambio }}</p></td>
                                 <td><p class="text-center">{{ x.fecha_aviso }}</p></td>
                                 <td><p class="text-center">{{ x.docu_aviso }}</p></td>
@@ -223,6 +223,7 @@
 
 
                             <th scope="col"><p class="text-center">N° de documento</p></th>
+                            <th scope="col"><p class="text-center">Tipo documento</p></th>
                             <th scope="col"><p class="text-center">Fecha vencimiento</p></th>
                             <th scope="col"><p class="text-center">Monto actual</p></th>
                           </tr>
@@ -231,6 +232,7 @@
 
                           <tr  ng-repeat="x in listFact"   >
                             <td><p class="text-center">{{ x.no_fisico }}</p></td>
+                            <td><p class="text-center">{{ x.nombre_tipo_doc }}</p></td>
                             <td><p class="text-center">{{ x.fecha_vencimiento }}</p></td>
                             <td><p class="text-center">{{ formato(2,x.monto_actual) }}</p></td>
                           </tr>
