--- a/app/comps/deuda/deuda.html
+++ b/app/comps/deuda/deuda.html
@@ -68,7 +68,7 @@
           </table>
 
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" style="background: #212529;" data-dismiss="modal"><i class="fas fa-1x fa-times"></i></button>
+        <button type="button" class="btn btn-info" style="background: #212529;" data-dismiss="modal">regresar</button>
       </div>
     </div>
   </div>
@@ -318,3 +318,7 @@
 </div>
 
 <my-footer></my-footer>
+
+<div ng-show="loading">
+  <my-loading></my-loading>
+</div>
