--- a/app/comps/deuda/deuda.html
+++ b/app/comps/deuda/deuda.html
@@ -85,8 +85,8 @@
       <div class="col-md-12 col-sm-12">
         <nav aria-label="breadcrumb" role="navigation">
           <ol class="breadcrumb m-0">
-            <li class="breadcrumb-item"><a class="text-success" >servidor.com</a></li>
-            <li class="breadcrumb-item"><a class="text-info" href="#!/home">Home</a></li>
+            <li class="breadcrumb-item"><a class="text-success" >{{window.location.hostname}}</a></li>
+            <li class="breadcrumb-item"><a class="text-info" href="#!/home">Inicio</a></li>
             <li class="breadcrumb-item active" aria-current="page">Deudas</li>
           </ol>
         </nav>
