--- a/app/comps/home/home.html
+++ b/app/comps/home/home.html
@@ -14,7 +14,7 @@
         <h2 class="text-center"> <strong>{{client_info.nombre_cliente}}</strong> </h2> -->
         <nav aria-label="breadcrumb" role="navigation">
           <ol class="breadcrumb m-0">
-            <li class="breadcrumb-item"><a class="text-success" >servidor.com</a></li>
+            <li class="breadcrumb-item"><a class="text-success" >{{window.location.hostname}}</a></li>
             <!-- <li class="breadcrumb-item"><a class="text-info" href="#!/home">Home</a></li> -->
             <li class="breadcrumb-item active" aria-current="page">Inicio</li>
             <li class="breadcrumb-item"><a class="text-info" href="#!/home">{{client_info.nombre_cliente}}</a></li>
